[tool.poetry]
name = "nonebot-plugin-tof"
version = "0.1.0"
description = "幻塔Bot"
authors = ["Wansn-w <2632324507@qq.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "nonebot_plugin_tof_mia"}]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^9.5.0"
wanmeibbskit = {git = "https://github.com/AidaCafe/WanmeiBBSKit"}
SQLAlchemy = "^2.0.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
